# cli

./: .ci-pre-commit-config.yaml  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.cased/: config.yaml
.github/workflows/: ci.yml  pre-commit.yml
cased/: cli.py
cased.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
cased/commands/: build.py  deploy.py  init.py  login.py  push.py  resources.py  spawn.py  transfer.py
cased/utils/: api.py  auth.py  config.py  constants.py  progress.py
cased_cli/: cli.py
cased_cli/commands/: build.py  check_env.py  deploy.py  init.py  login.py  resources.py  verify_env.py
cased_cli/utils/: api.py  auth.py  config.py  constants.py  progress.py
cli/: cli.py
