[tool.poetry]
name = "cased"
version = "0.1.0"
description = "A CLI tool for managing deployments and branches"
authors = ["Cased <cli@cased.com>"]
readme = "README.md"
repository = "https://github.com/cased/cli"
packages = [{include = "cased"}]

[tool.poetry.dependencies]
python = "^3.7"
click = "*"
requests = "*"
rich = "*"
questionary = "*"
python-dateutil = "*"

[tool.poetry.scripts]
cased = "cased.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Homepage" = "https://github.com/cased/csd"